@@ -1,5 +1,6 @@
-# Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001
-# 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2012 Free Software Foundation, Inc.
+# Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
+# 2001 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2012, 2016 Free
+# Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -29,15 +30,6 @@ proc mail_file { file to subject } {
     if {[file readable $file]} {
 	catch "exec mail -s \"$subject\" $to < $file"
     }
-}
-
-# Check for XML output flag or environment variable.
-#
-proc check_xml { } {
-    global env
-
-    set x "RUNTESTFLAGS"
-    return [format "%s" $env($x)]
 }
 
 # Insert DTD for xml format checking.
